switch to yarn. add router module, move logger display to /logger-display.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-chatroom></app-chatroom>
-<app-log-display></app-log-display>
+<nav>
+  <a routerLink="/logger-display"routerLinkActive="active">Display Log</a>
+</nav>
+<router-outlet></router-outlet>
